Task storing to DB. Success page modified. DB modified as well.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 server.port=8090
-
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/shopdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/tasktracker
 spring.datasource.username=web
 spring.datasource.password=web
