--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc:2.4.2'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.4.2'
     implementation 'org.postgresql:postgresql:42.2.18'
+    implementation 'org.springframework.security:spring-security-crypto:5.4.2'
+    //implementation 'org.springframework.boot:spring-boot-starter-security:2.4.2'
+
 }
