--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.4.2'
     implementation 'org.postgresql:postgresql:42.2.18'
     implementation 'org.springframework.security:spring-security-crypto:5.4.2'
-    //implementation 'org.springframework.boot:spring-boot-starter-security:2.4.2'
+    implementation 'org.springframework.boot:spring-boot-starter-security:2.4.2'
 
 }
