--- a/build.gradle
+++ b/build.gradle
@@ -19,5 +19,7 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.2.18'
     implementation 'org.springframework.security:spring-security-crypto:5.4.2'
     implementation 'org.springframework.boot:spring-boot-starter-security:2.4.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.2'
+
 
 }
