--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ dependencies {
     implementation 'org.springframework.security:spring-security-crypto:5.4.2'
     implementation 'org.springframework.boot:spring-boot-starter-security:2.4.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.2'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.12.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.2'
+
+
 
 
 }
